--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,10 @@
         <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
 
         <!-- Google Fonts Style -->
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Lexend:wght@100;200;300;400;500;600;700;800;900&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
